idf_component_register(SRCS "hello_world_main.c"
                             "User/src/device_web_config.c"
                             "User/src/wifi_connect.c"
                             "User/src/camera.c"
                             "User/src/media_storage.c"
                             "User/src/media_mp4_writer.c"
                             "User/src/photo_web_server.c"
                             "User/src/rtsp_server.c"
                             "User/src/tcp_uart_server.c"
                             "User/src/eth_tcp_server.c"
                             "User/src/eth_connect.c"
                             "User/src/tf_card.c"
                       PRIV_REQUIRES
                           spi_flash
                           esp_wifi
                           esp_netif
                           esp_event
                           nvs_flash
                           esp_wifi_remote
                           esp_hosted
                           esp_video
                           esp_http_server
                           esp_driver_jpeg
                           esp_driver_ppa
                           esp_driver_uart
                           esp_driver_sdmmc
                           esp_h264
                           esp_muxer
                           esp_eth
                           esp_timer
                           fatfs
                           sdmmc
                       INCLUDE_DIRS "User/include"
)
